change weixin award  and pay admin

--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -16,7 +16,7 @@
       <p>距离活动开始还有<font style="color:red;"><span style="font-size:20px">{{ days }}</span>天<span style="font-size:20px">{{ hours }}</span>小时<span style="font-size:20px">{{ minutes }}</span>分</font>，共有<font style="color:red;font-size:20px">3000份</font>卡通凉席免费领取！</p>
       <!--<p>3000份卡通凉席赠送活动已经圆满结束，恭喜获得免费试用的妈妈们，下期活动更精彩，美妈们请继续关注哦！</p>-->
       {% endif %}
-      <p>前两批 共<font style="color:red;font-size:20px">1460</font>位妈妈审核通过  <a href="/weixin/inviteresult/">查看中奖名单&gt;&gt;</a></p>
+      <p>前三批 共<font style="color:red;font-size:20px">1914</font>位妈妈审核通过  <a href="/weixin/inviteresult/">查看中奖名单&gt;&gt;</a></p>
 
       <!--
       <p>第一批 综合得分 350，点击次数 20 以上  <a href="/weixin/finallist/2/1/1/">中奖名单&gt;&gt;</a></p>
