--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -21,7 +21,7 @@
       <p style="color:red;">4月13日 - 4月20日， <font style="font-size:20px;color:red;">3000</font>份卡通凉席免费试用活动，<a href="/weixin/freesamples/">美妈们快抢！>></a></p>
       <p>第一批 共735名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/1/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第二批 共725名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/2/1/1504/">中奖名单&gt;&gt;</a></p>
-      <p>第二批 共454名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/3/1/1504/">中奖名单&gt;&gt;</a></p>
+      <p>第三批 共454名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/3/1/1504/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
