--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -22,6 +22,7 @@
       <p>第一批 共735名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/1/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第二批 共725名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/2/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第三批 共454名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/3/1/1504/">中奖名单&gt;&gt;</a></p>
+      <p>第四批 共423名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/4/1/1504/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
