--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -76,17 +76,20 @@
       <div class="row" style="text-align:center">
 	<p id="id_msg" style="text-align:center;color:red"></p>
 	<div class="col-xs-12" style="text-align:center; margin-top:16px">
+	{% if started %}
 	{% if order_exist %}
 	<p>亲，您的申请已经提交。</p>
 	<p><a href="/wx/sampleads/{{ wx_user.pk }}/">分享您的VIP邀请码页面>></a></p>
-    {% else %}
-		{% if started %}
+        {% else %}
+		
 	  <input type="submit" class="btn btn-warning" value="提交试用申请"/>
-        {% else %} 
-	  <button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
-	  <p style="color:red;margin-top:10px">请提前关注【优尼世界】，申请待开放！</p>
-        {% endif %}
 	{% endif %}
+        {% else %} 
+	  <!--<button type="button" class="btn btn-warning" disabled="disabled">申请待开放...</button>
+	  <p style="color:red;margin-top:10px">请提前关注【优尼世界】，申请待开放！</p>-->
+	  <p style="color:red;margin-top:10px">卡通凉席免费试用活动已结束，谢谢美妈们的参与，后期活动更精彩！</p>
+        {% endif %}
+	
 	</div>
       </div>
     </form>
