fix weixin templates

--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result1.html
@@ -18,13 +18,13 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">免费试用 中奖名单</div>
     <div class="panel-body">
-      <p style="color:red;font-size:18px;">由于系统故障，导致好友无法看到朋友圈分享链接，亲们可以直接将链接分享给需要凉席的好友们,谢谢理解！</p>
       <p style="color:red;">4月13日 - 4月20日， <font style="font-size:20px;color:red;">3000</font>份卡通凉席免费试用活动,<a href="/weixin/freesamples/">美妈们快抢！>></a></p>
       <p>第一批 共735名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/1/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第二批 共725名 ，邀请码 9 次 ，点击 11 次以上  <a href="/weixin/finallist/2/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第三批 共454名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/3/1/1504/">中奖名单&gt;&gt;</a></p>
       <p>第四批 共423名 ，邀请码 10 次 ，点击 12 次以上 <a href="/weixin/finallist/4/1/1504/">中奖名单&gt;&gt;</a></p>
-      <p>第四批 共394名 ，邀请码 8 次 ，点击 8 次以上 <a href="/weixin/finallist/5/1/1504/">中奖名单&gt;&gt;</a></p>
+      <p>第五批 共394名 ，邀请码 8 次 ，点击 8 次以上 <a href="/weixin/finallist/5/1/1504/">中奖名单&gt;&gt;</a></p>
+      <p>第六批 共275名 ，邀请码 8 次 ，点击 2 次以上 <a href="/weixin/finallist/6/1/1504/">中奖名单&gt;&gt;</a></p>
     </div>
   </div>
 
@@ -49,7 +49,6 @@
 	      </div>
 	    </div>
 	  </div>
-
         {% endif %}
       {% else %}
       <p style="color:red;">亲，恭喜您的试用申请通过了！</p>
