--- a/shopmanager/flashsale/pay/templates/pay/myorder.html
+++ b/shopmanager/flashsale/pay/templates/pay/myorder.html
@@ -1,4 +1,4 @@
-{% extends "pay/pay_base.html" %}
+{% extends "pay/base_pay.html" %}
 
 {% block title %}小鹿美美-我的订单{% endblock %}
 
@@ -15,7 +15,7 @@
 
 
 {% block container %}
-  
+ <div> 我的订单 LIST</div>
 {% endblock %}
 
 
