fix pay address

--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -44,7 +44,7 @@
     <div class="col-xs-1 glyphicon glyphicon-chevron-right" target="_self"></div>
     </a>
     {% else %}
-    <a><div class="col-xs-offset-1 col-xs-9">您还没有添加您地址，点击添加</div></a>
+    <a href="/mm/addr/list/?origin_url={{ origin_url }}" target="_self"><div class="col-xs-offset-1 col-xs-9">您还没有添加您地址，点击添加</div></a>
     {% endif %}
 </div>
 <div class="title">选择支付方式</div>
