--- a/shopmanager/shopapp/xiaolumm/templates/mama_stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/mama_stats.html
@@ -25,7 +25,7 @@
   <ul class="list-group">
     <li class="list-group-item">手机号: {{ mobile }}</li>
     <li class="list-group-item">微客服: {{ weikefu }}</li>
-    <li class="list-group-item">专属链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
+    <li class="list-group-item">抢购链接： <b>http://xiaolu.so/m/{{ pk }}/</b></li>
     <li class="list-group-item">点击人数: {{ click_num }}</li>
     <li class="list-group-item">订单人数: {{ order_num }}</li>
   </ul>
