--- a/shopmanager/shopapp/xiaolumm/templates/stats.html
+++ b/shopmanager/shopapp/xiaolumm/templates/stats.html
@@ -20,7 +20,7 @@
 
 <div class="row" style="margin-top:20px">
   <div class="col-xs-8 page-header">
-	<h2>小鹿妈妈-今日数据统计</h2>
+	<h2>小鹿妈妈 - 数据统计</h2>
 	</div>
   <div class="col-xs-4" style="margin: 80px 0 20px;">
   <select class="form-control" name="color" id="id-select">
@@ -31,6 +31,19 @@
   </div>
 </div>
 
+<div class="row">
+  <div class="col-xs-4">
+    <a href="/m/stats/?pk={{ pk }}&day={{ prev_day }}"><< 前一天</a>
+  </div>
+  <div class="col-xs-4">
+    <p>{{ target_date }}</p>
+  </div>
+  <div class="col-xs-4">
+    {% if next_day %}
+    <a href="/m/stats/?pk={{ pk }}&day={{ next_day }}">后一天 >></a>
+    {% endif %}
+  </div>
+</div>
 <div style="margin-top:20px">
   <table id="state_table" class="table table-bordered">
     <thead>
@@ -55,6 +68,7 @@
 
 <form action="/m/stats/" method="get" id="id-form">
   <input type="hidden" name="pk" id="id-pk"/>
+  <input type="hidden" name="day" value="{{ target_date }}"/>
 </form>
 
 {% endblock %}
