--- a/shopmanager/flashsale/pay/templates/pay/morder.html
+++ b/shopmanager/flashsale/pay/templates/pay/morder.html
@@ -9,8 +9,9 @@
     <style style="text/css">
     .wrap { background:#b81b22; }
   	.wrap a{font-size:16px;color:white;padding:10px 10px;margin-top:10px;display: inline-block;}
-    .address {margin-top:50px;margin-bottom:0px;background:#6f5499;}
-    .address a{color:white;}
+  	.container-head{margin-top:50px;margin-bottom:0px;background:#6f5499;}
+  	.container-head a {color:white;}
+    .well-lg { padding:24px 5px;}
     .glyphicon{font-size:30px;}
     .address-detail {font-size:6px;}
     </style>
@@ -33,39 +34,54 @@
     </div>
 </nav>
 
-<div class="well well-sm row address">
+<div class="container-fluid">
+<div class="well well-lg row container-head">
 	{% if address %}
     <a href="/mm/addr/list/?origin_url={{ origin_url }}" target="_self">
-    <div class="col-xs-1 glyphicon glyphicon-map-marker" ></div>
-    <div class="col-xs-9"><div><label>收货人:</label><span>{{ address.receiver_name }}</span>
-    	<span class="pull-right">{{ address.receiver_mobile }}</span></div>
-    <div class="address-detail"><label>收货地址:</label><span>{{ address.receiver_state }}&nbsp;{{ address.receiver_city }}
-    	&nbsp;{{ address.receiver_district }}&nbsp;{{ address.receiver_address }}</span></div></div>
-    <div class="col-xs-1 glyphicon glyphicon-chevron-right" target="_self"></div>
+    <div >
+    <div class="pull-left glyphicon glyphicon-map-marker" ></div>
+    <div class="col-xs-9">
+    	<div><label>收货人:</label><span>{{ address.receiver_name }}</span><span class="pull-right">{{ address.receiver_mobile }}</span></div>
+    	<div class="address-detail"><label>收货地址:</label><span>{{ address.receiver_state }}&nbsp;{{ address.receiver_city }}
+    	&nbsp;{{ address.receiver_district }}&nbsp;{{ address.receiver_address }}</span></div>
+    </div>
+    <div class="glyphicon glyphicon-chevron-right" target="_self"></div>
+ 	</div>
     </a>
     {% else %}
-    <a href="/mm/addr/list/?origin_url={{ origin_url }}" target="_self"><div class="col-xs-offset-1 col-xs-9">您还没有添加您地址，点击添加</div></a>
+    <a href="/mm/addr/list/?origin_url={{ origin_url }}" target="_self"><div class="col-xs-offset-1 col-xs-9 ">您还没有添加您地址，点击添加</div></a>
     {% endif %}
 </div>
+<div class="row">
 <div class="title">选择支付方式</div>
+</div>
+<div class="row">
 <div class="pay_way">
+    {% if weixin_from %}
     <div id="wx_pub" class="wrapper selected">
         <div class="check"></div>
         <div class="img"><img src="{{ STATIC_URL }}images/pay_wechat.png"></div>
         <div class="text">微信支付</div>
     </div>
-    <div id="alipay_wap" class="wrapper">
+    {% endif %}
+    {% if alipay_from %}
+    <div id="alipay_wap" class="wrapper {% if not weixin_from %}selected{% endif %}">
         <div class="check"></div>
         <div class="img"><img src="{{ STATIC_URL }}images/pay_alipay.png"></div>
         <div class="text">支付宝支付</div>
     </div>
+    {% endif %}
    <!-- <div id="upacp_wap" class="wrapper">
         <div class="check"></div>
         <div class="img"><img src="{{ STATIC_URL }}images/pay_union.png"></div>
         <div class="text">银联支付</div>
     </div>-->
 </div>
+</div>
+<div class="row">
 <div class="title">确认购买商品</div>
+</div>
+<div class="row">
 <div class="product_sure">
     <div class="wrapper">
         <div class="img"><img src="{{ product.pic_path }}" /></div>
@@ -103,14 +119,18 @@
         </div>
     </div>
 </div>
+</div>
+<div class="row">
 <div class="title">确认付款金额</div>
+</div>
+<div class="row">
 <div class="price_sure">
     <div class="wrapper">商品金额总计<div class="price sum">￥<span>{{ real_fee }}</span></div></div>
     <div class="wrapper">快递费<div class="price post">￥<span>{{ post_fee }}</span></div></div>
     <div class="line"></div>
     <div class="wrapper">订单总额<div class="price all">￥<span>{{ payment }}</span></div></div>
 </div>
-
+</div>
 <form id="order-form" action="#" method="POST">
 <input type="hidden" name="item_id" value="{{ product.id }}" />
 <input type="hidden" name="sku_id" value="{{ sku.id }}" />
@@ -128,12 +148,14 @@
 <input type="hidden" id="channel" name="channel" />
 <input type="hidden" id="message" name="buyer_message" />
 </form>
-
+<div class="row">
 <div id="pay_now">
     <div class="btn">
         <img width="16" height="16" style="margin-right: 5px;"  src="{{ STATIC_URL }}images/pay.png" />
         确认付款
     </div>
+</div>
+</div>
 </div>
 {% endblock %}
 
