--- a/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
+++ b/shopmanager/flashsale/pay/templates/pay/mrefundapply.html
@@ -91,8 +91,8 @@
     	 <input type="hidden" name="trade_id" value="{{ order.sale_trade }}" >
     	  <input type="hidden" name="order_id" value="{{ order.id }}" >
     	  <div class="form-group form-group-sm">
-		    <label for="inputNum32" class="col-xs-3 control-label">是否收货：</label>
-		    <div class="col-xs-9">
+		    <label for="inputNum32" class="col-xs-3 col-lg-1 control-label">是否收货：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <select id="selectReason31" name="good_receive" required="required" class="form-control">
 		      	<option value="">提示：亲，退货退款请选择我要退货哦</option>
 				<option value="Y">是</option>
@@ -101,8 +101,8 @@
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="selectReason31" class="col-xs-3 control-label">退款原因：</label>
-		    <div class="col-xs-9">
+		    <label for="selectReason31" class="col-xs-3 col-lg-1 control-label">退款原因：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <select id="selectReason31" name="reason" required="required" class="form-control">
 				  <option value="">请选择退款理由</option>
 				  <option value="2">2</option>
@@ -113,14 +113,14 @@
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="inputRefund31" class="col-xs-3 control-label">退款金额：</label>
-		    <div class="col-xs-9">
+		    <label for="inputRefund31" class="col-xs-3 col-lg-1 control-label">退款金额：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <input type="number" name="refund_fee" max="{{ order.payment }}" min="0" step = "any" required = "required" class="form-control " id="inputRefund31" value="0">
 		    </div>
 		  </div>
 		  <div class="form-group ">
-		    <label for="textDesc31" class="col-xs-3 control-label">补充描述：</label>
-		    <div class="col-xs-9">
+		    <label for="textDesc31" class="col-xs-3 col-lg-1 control-label">补充描述：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <textarea id="textDesc31" name="desc" class="form-control" rows="3" placeholder="补充详细描述能帮助售后快速处理你的退款退货申请"></textarea>
 		    </div>
 		  </div>
@@ -140,8 +140,8 @@
     	  <input type="hidden" name="trade_id" value="{{ order.sale_trade }}" >
     	  <input type="hidden" name="order_id" value="{{ order.id }}" >
 		  <div class="form-group form-group-sm">
-		    <label for="selectReason32" class="col-xs-3 control-label">退货原因：</label>
-		    <div class="col-xs-9">
+		    <label for="selectReason32" class="col-xs-3 col-lg-1 control-label">退货原因：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <select id="selectReason32" name="reason" required = "required" class="form-control">
 		      	  <option value="">提示：亲，请确保商品包装完好再退货</option>
 				  <option value="1">1</option>
@@ -153,33 +153,33 @@
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="inputNum32" class="col-xs-3 control-label">退货数量：</label>
-		    <div class="col-xs-9">
+		    <label for="inputNum32" class="col-xs-3 col-lg-1 control-label">退货数量：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <input type="number" name="refund_num" max="{{ order.num }}" min="1"  required = "required" class="form-control " id="inputNum32" value="{{ order.num }}" {% if order.num == 1 %}readonly{% endif %}>
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="inputRefund32" class="col-xs-3 control-label">退款金额：</label>
-		    <div class="col-xs-9">
+		    <label for="inputRefund32" class="col-xs-3 col-lg-1 control-label">退款金额：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <input type="number" name="refund_fee" max="{{ order.payment }}" min="0" step = "any" required = "required" class="form-control " id="inputRefund32" value="{{ order.payment }}">
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="inputCompany32" class="col-xs-3 control-label">退货快递：</label>
-		    <div class="col-xs-9">
+		    <label for="inputCompany32" class="col-xs-3 col-lg-1 control-label">退货快递：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <input type="text" name="company_name" maxlength="20" required = "required" class="form-control " id="inputCompany32" placeholder="请输入退货快递...">
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
-		    <label for="inputSid32" class="col-xs-3 control-label">退回单号：</label>
-		    <div class="col-xs-9">
+		    <label for="inputSid32" class="col-xs-3 col-lg-1 control-label">退回单号：</label>
+		    <div class="col-xs-9 col-lg-11">
 		      <input type="text" name="sid" maxlength="20" pattern="[A-z0-9]{8,20}" required = "required" class="form-control " id="inputSid32" placeholder="请输入退货快递单号...">
 		    </div>
 		  </div>
 		  <div class="form-group ">
-		    <label for="textDesc32" class="col-xs-3 control-label">补充描述：</label>
-		    <div class="col-xs-9">
-		      <textarea name="desc" class="form-control" rows="3" id="textDesc32" placeholder="补充详细描述能帮助售后快速处理你的退款退货申请"></textarea>
+		    <label for="textDesc32" class="col-xs-3 col-lg-1 control-label">补充描述：</label>
+		    <div class="col-xs-9 col-lg-11">
+		      <textarea name="desc" class="form-control" rows="3" cols="200" id="textDesc32" placeholder="补充详细描述能帮助售后快速处理你的退款退货申请"></textarea>
 		    </div>
 		  </div>
 		  <div class="form-group form-group-sm">
