--- a/shopmanager/flashsale/pay/templates/pay/mprofile.html
+++ b/shopmanager/flashsale/pay/templates/pay/mprofile.html
@@ -112,6 +112,16 @@
   </li>
 </ul>
 </div>
+
+
+<nav id="main-nav" class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+	  <ul class="nav nav-pills nav-justified">
+		  <li role="presentation" ><a href="{% url sale_home %}" class="col-xs-6" target="_self">今日上新</a></li>
+		  <li role="presentation" ><a href="{% url user_profile %}" class="col-xs-6" target="_self">个人中心</a></li>
+	  </ul>
+  </div>
+  </nav>
 </div>
 {% endblock %}
 
