--- a/shopmanager/flashsale/pay/templates/pay/mproduct.html
+++ b/shopmanager/flashsale/pay/templates/pay/mproduct.html
@@ -29,7 +29,7 @@
 </div>
 <div id="info_holder">
     <div class="name">
-        {{ product.title }}
+        {{ title }}
     </div>
     <div class="detail">
         <!-- 商品详情 -->
@@ -78,6 +78,7 @@
         <div class="chooser info">
             <div class="name">
                 <!-- 商品名称 -->
+                {{ title }}
             </div>
             <div class="detail">
                 <!-- 商品详情 -->
